--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
+		"mysql": "^2.18.1",
 		"pg": "^8.6.0",
 		"reflect-metadata": "^0.1.13",
 		"typeorm": "^0.2.32",
