--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"outDir": "dist",
+		"outDir": "dist/src",
 		"target": "ES2017",
 		"module": "commonjs",
 		"rootDir": "./src",
