--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"@types/express": "^4.17.11",
 		"@types/jsonwebtoken": "^8.5.1",
 		"@types/uuidv4": "^5.0.0",
+		"ts-node": "^9.1.1",
+		"ts-node-dev": "^1.1.6",
 		"typescript": "^4.2.4"
 	},
 	"dependencies": {
@@ -22,7 +24,7 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
-		"mysql": "^2.18.1",
+		"mysql2": "^2.2.5",
 		"pg": "^8.6.0",
 		"reflect-metadata": "^0.1.13",
 		"typeorm": "^0.2.32",
@@ -31,10 +33,7 @@
 	"scripts": {
 		"start": "NODE_ENV=production node dist/server.js",
 		"build": "rimraf dist && tsc",
-		"typeorm": "node --trace-warnings --require ts-node/register ./node_modules/typeorm/cli.js",
-		"dev": "NODE_ENV=devlopment tsnd --respawn --transpile-only --ignore-watch node_modules --no-notify --trace-warnings -- src/server.ts",
-		"pretest": "node --require ts-node/register ./node_modules/typeorm/cli.js migration:run -c test",
-		"test": "NODE_ENV=test jest --coverage",
-		"posttest": "node --require ts-node/register ./node_modules/typeorm/cli.js migration:revert -c test"
+		"typeorm": "node --trace-warnings --require ts-node/register ./node_modules/typeorm/cli.js -f src/providers/orm/typeorm/ormconfig",
+		"dev": "NODE_ENV=devlopment tsnd --respawn --transpile-only --ignore-watch node_modules --no-notify --trace-warnings -- src/server.ts"
 	}
 }
