--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
+APP_SECRET=
+
 POSTGRES_URL=
-POSTGRES_CONNECTION=
+POSTGRES_CONNECTION=dev_postgres_database
+
 MYSQL_URL=
-MYSQL_CONNECTION=
+MYSQL_CONNECTION=dev_mysql_database
+
